--- a/data/data.yaml
+++ b/data/data.yaml
@@ -1,3 +1,4 @@
-blueCheckBoxXpath:
+blueSwitchPx:
   Mi 10 : //*[@resource-id="android:id/checkbox"]
   Redmi Note 3 : //*[@resource-id="android:id/list"]/android.widget.LinearLayout[1]/android.widget.LinearLayout[1]/android.widget.CheckBox[1]
+  MI 8 : (0.316, 0.195)
